# real-time-ml-system-3

./: .gitignore  README.md  pyproject.toml  ruff.toml
docker-compose/: Makefile  redpanda.yml  technical-indicators-historical.yml  technical-indicators-live.yml  technical-indicators-pipeline.yml
services/candles/: Makefile  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env
services/technical-indicators/: Dockerfile  Makefile  candle.py  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env  technical_indicators.py
services/to-feature-store/: Dockerfile  Makefile  README.md  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env  sinks.py
services/trades/: Dockerfile  Makefile  README.md  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  settings.env
services/trades/kraken_api/: base.py  mock.py  rest.py  trade.py  websocket.py
sessions/: session_1.md  session_2.md  session_3.md  session_4.md  session_5.md
